examples/test/testpolicy13673.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13673
  namespace: namespace337
spec:
  podSelector:
    matchLabels:
      key6: value41
      key5: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value20
          key39: value41
          key15: value33
      podSelector:
        matchLabels:
          key47: value11
          key26: value47
          key44: value19
